<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#3385FF"
        android:gravity="center"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_2_connect"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="35sp"
            />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_business_card"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginTop="11dp"
            android:layout_alignParentTop="true"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/business_card"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:foreground="@drawable/border_business_card"
            android:layout_below="@id/view_title"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:weightSum="5">

                <LinearLayout
                    android:layout_weight="1.5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_your_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/your_name"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textAlignment="center"
                        android:layout_marginTop="20dp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical"
                        tools:ignore="NestedWeights">

                        <TextView
                            android:id="@+id/tv_your_street"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/your_street"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textAlignment="textStart"
                            />

                        <TextView
                            android:id="@+id/tv_your_city"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/your_city"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textAlignment="textStart"
                            />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tel"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                android:textAlignment="textStart"
                                tools:ignore="NestedWeights" />

                            <TextView
                                android:id="@+id/tv_your_phone_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/your_phone_number"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                android:textAlignment="textStart"
                                />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/email"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                android:textAlignment="textStart"
                                tools:ignore="NestedWeights" />

                            <TextView
                                android:id="@+id/tv_your_email_address"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/your_email_address"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                android:textAlignment="textStart"
                                />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="3.5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/qr_code"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"/>

                </LinearLayout>

            </LinearLayout>



        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/business_card"
            android:layout_marginTop="30dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_show_qr_code"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="20dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="#3385FF"
                android:visibility="visible"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_qr_code"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_edit_business_card_gray"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="20dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="#CCCCCC"
                android:visibility="visible"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_business_card"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_share_business_card"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="20dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/black"
                android:visibility="visible"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_business_card"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/buttons"
            android:layout_marginTop="40dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/logo_blue"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/scan_2_connect"
                android:textStyle="bold"
                android:textColor="#3385FF"
                android:textSize="17sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                />

        </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>